unpackaged/main/default/objects/ETI_Inspector__c/ETI_Inspector__c.object-meta.xml
<CustomObject>
    <label>Inspector</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>