unpackaged/main/default/objects/ETI_Inspector__c/fields/ETI_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>ETI_Email_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>