unpackaged/main/default/objects/ETI_Inspector__c/fields/ETI_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>ETI_Employee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>