unpackaged/main/default/objects/ETI_Inspector__c/fields/ETI_Location__c.field-meta.xml
<CustomField>
    <fullName>ETI_Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al Ain Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Al Faya Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Al Hayer Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Al Jaber Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Al Quaa Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Al Saad Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Dubai Municipality Inspection Center</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center-Rta(Awir)</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center-Rta(Jebel Ali)</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center-Rta(Khawneej)</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center-Rta(Qusais)</fullName>
            </value>
            <value>
                <fullName>Dubai(M) Inspection Center-Rta(Ruwaiyya)</fullName>
            </value>
            <value>
                <fullName>Fujairah Inspection Center</fullName>
            </value>
            <value>
                <fullName>Ghayathi Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Madeenat Zayed Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Mussafah Inspection Centre</fullName>
            </value>
            <value>
                <fullName>Sharjah Spea Inspection Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>