unpackaged/main/default/objects/ETI_Inspector__c/fields/ETI_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>ETI_Phone_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>