unpackaged/main/default/objects/ETI_Inspector__c/fields/ETI_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>ETI_Working_Hours__c</fullName>
    <label>Working Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5AM - 6PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>