unpackaged/main/default/objects/ETI_Inspector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Location__c</columns>
    <columns>ETI_Location__c</columns>
    <columns>ETI_Working_Days__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>